--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Keyword::API
 
 VERSION
-    version 0.0003
+    version 0.0004
 
 SYNOPSIS
         use Keyword::API;
@@ -12,43 +12,47 @@ SYNOPSIS
 
             my $name = %params && $params{-as} ? $params{-as} : "method";
 
-            $class->install_keyword($name);
+            install_keyword(__PACKAGE__, $name);
         }
 
         sub unimport { uninstall_keyword() }
 
         sub parser {
             lex_read_space(0);
-            my $sub_name = lex_unstuff_token();
+            my $sub_name = lex_unstuff_to_ws();
             my $sig = lex_unstuff_to('{');
             my ($roll) = $sig =~ /\((.+)\)\s*{/;
             lex_stuff("sub $sub_name {my (\$self, $roll) = \@_;");
         };
 
 DESCRIPTION
-    This is an experimental module to provide a pure perl interface for the
-    keywords API added to the perl core in 5.12.
+    This module provides a pure perl interface for the keywords API added to
+    the perl core in 5.12.
+
+NAME
+    Keyword::API - Perl interface to the keyword API
+
+EXPERIMENTAL
+    This module is likely to change in the near future. Patches and feedback
+    most welcome.
 
   EXPORT
         install_keyword
         uninstall_keyword 
         lex_read_space
         lex_read
-        lex_read_token
+        lex_read_to_ws
         lex_stuff
         lex_unstuff
         lex_unstuff_to
-        lex_unstuff_token
-
-NAME
-    Keyword::API - Perl interface to the keyword API
+        lex_unstuff_to_ws
 
 FUNCTIONS
   install_keyword
-    class method, provide name of your keyword e.g 'method'
+    pass your package name and provide the name of your keyword e.g 'method'
 
   uninstall_keyword
-    remove the keyword hook, no arguments.
+    remove the keyword hook, no arguments required.
 
   lex_read_space
         lex_read_space(0);
@@ -60,7 +64,7 @@ FUNCTIONS
 
     Consumes $n bytes of text from the lexer buffer.
 
-  lex_read_token
+  lex_read_to_ws
         my $toke = lex_read_token();
 
     Consumes any text in the lexer until white space is reached.
@@ -80,13 +84,13 @@ FUNCTIONS
 
     Discard everything in the buffer until the character is met.
 
-  lex_unstuff_token
+  lex_unstuff_to_ws
         my $discarded_text = lext_unstuff_token();
 
     Discard everything in the buffer until white space is met
 
 SEE ALSO
-    perlapi Devel::Declare Filter::Simple
+    perlapi Devel::Declare Filter::Simple Syntax::Feature::Method
 
 AUTHOR
     Robin Edwards <robin.ge@gmail.com>
